unpackaged/main/default/objects/Contract/fields/AM_Email__c.field-meta.xml
<CustomField>
    <fullName>AM_Email__c</fullName>
    <formula>Client_Account_Manager__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM Email</label>
    <type>Text</type>
</CustomField>