unpackaged/main/default/objects/Contract/fields/Billing_Record_Created__c.field-meta.xml
<CustomField>
    <fullName>Billing_Record_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billing Record Created</label>
    <type>Checkbox</type>
</CustomField>