unpackaged/main/default/objects/Contract/fields/Client_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Client_Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Account Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts2</relationshipName>
    <type>Lookup</type>
</CustomField>