unpackaged/main/default/objects/Contract/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <label>Client Name</label>
    <type>TextArea</type>
</CustomField>