unpackaged/main/default/objects/Contract/fields/Client_No_Longer_Active__c.field-meta.xml
<CustomField>
    <fullName>Client_No_Longer_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client No Longer Active</label>
    <type>Checkbox</type>
</CustomField>