unpackaged/main/default/objects/Contract/fields/Contract_Awaiting__c.field-meta.xml
<CustomField>
    <fullName>Contract_Awaiting__c</fullName>
    <label>Contract Awaiting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting CVS Legal</fullName>
            </value>
            <value>
                <fullName>Awaiting PrudentRX</fullName>
            </value>
            <value>
                <fullName>Awaiting PrudentRx Legal</fullName>
            </value>
            <value>
                <fullName>Awaiting Client</fullName>
            </value>
            <value>
                <fullName>Completed and Sent</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Awawiting PrudentRx</fullName>
                <isActive>false</isActive>
                <label>Awawiting PrudentRx</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>