unpackaged/main/default/objects/Contract/fields/Contract_Notes__c.field-meta.xml
<CustomField>
    <fullName>Contract_Notes__c</fullName>
    <label>Contract Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>