unpackaged/main/default/objects/Contract/fields/Contract_Termination_Notice__c.field-meta.xml
<CustomField>
    <fullName>Contract_Termination_Notice__c</fullName>
    <inlineHelpText>If &#39;Term for Convenience&#39; is selected please ensure you fill out the &#39;Termination Term&#39; field below.</inlineHelpText>
    <label>Contract Termination Notice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>Term for Convience</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>