unpackaged/main/default/objects/Contract/fields/Contract_Version__c.field-meta.xml
<CustomField>
    <fullName>Contract_Version__c</fullName>
    <label>Contract Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>