unpackaged/main/default/objects/Contract/fields/Contracts_Legal_Dept_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contracts_Legal_Dept_Contact_Name__c</fullName>
    <label>Contracts / Legal Dept Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>