unpackaged/main/default/objects/Contract/fields/Copayment_Type__c.field-meta.xml
<CustomField>
    <fullName>Copayment_Type__c</fullName>
    <label>Copayment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>