unpackaged/main/default/objects/Contract/fields/CPA_Signer_Name__c.field-meta.xml
<CustomField>
    <fullName>CPA_Signer_Name__c</fullName>
    <label>CPA Signer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>