unpackaged/main/default/objects/Contract/fields/CPA_Signer_Title__c.field-meta.xml
<CustomField>
    <fullName>CPA_Signer_Title__c</fullName>
    <label>CPA Signer Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>