unpackaged/main/default/objects/Contract/fields/Data_Breach_Contact_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Data_Breach_Contact_s_Email__c</fullName>
    <label>Data Breach Contact&#39;s Email</label>
    <type>Email</type>
</CustomField>