unpackaged/main/default/objects/Contract/fields/Data_Release_Included__c.field-meta.xml
<CustomField>
    <fullName>Data_Release_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Release Included</label>
    <type>Checkbox</type>
</CustomField>