unpackaged/main/default/objects/Contract/fields/Effective_Date_for_PSM__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date_for_PSM__c</fullName>
    <label>Effective Date for PSM</label>
    <type>Date</type>
</CustomField>