unpackaged/main/default/objects/Contract/fields/Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Go_Live_Date__c</fullName>
    <label>Go-Live Date</label>
    <type>Date</type>
</CustomField>