unpackaged/main/default/objects/Contract/fields/Health_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Health_Plan_Name__c</fullName>
    <label>Health Plan Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aetna</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>