unpackaged/main/default/objects/Contract/fields/HPC__c.field-meta.xml
<CustomField>
    <fullName>HPC__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>High Profile Client</inlineHelpText>
    <label>HPC</label>
    <type>Checkbox</type>
</CustomField>