unpackaged/main/default/objects/Contract/fields/Lead_Account_Created_in_SF__c.field-meta.xml
<CustomField>
    <fullName>Lead_Account_Created_in_SF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Account Created in SF</label>
    <type>Checkbox</type>
</CustomField>