unpackaged/main/default/objects/Contract/fields/Nickname_DBA__c.field-meta.xml
<CustomField>
    <fullName>Nickname_DBA__c</fullName>
    <label>Nickname/DBA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>