unpackaged/main/default/objects/Contract/fields/Non_Renewal_Notice_to_PRx_Days__c.field-meta.xml
<CustomField>
    <fullName>Non_Renewal_Notice_to_PRx_Days__c</fullName>
    <inlineHelpText>Day&#39;s before Go-Live date (Effective Date)</inlineHelpText>
    <label>Non-Renewal Notice to PRx (Days)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>