unpackaged/main/default/objects/Contract/fields/Notable_Contract_Difference__c.field-meta.xml
<CustomField>
    <fullName>Notable_Contract_Difference__c</fullName>
    <label>Notable Contract Difference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>