unpackaged/main/default/objects/Contract/fields/Program_Term_Reason__c.field-meta.xml
<CustomField>
    <fullName>Program_Term_Reason__c</fullName>
    <inlineHelpText>If &#39;Other&#39; is selected please ensure to add a note on the reason in the Cotract Note field at the bottom of the page.</inlineHelpText>
    <label>Program Term Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Longer with Aetna</fullName>
            </value>
            <value>
                <fullName>Not satisfied with the program</fullName>
            </value>
            <value>
                <fullName>Termed for convenience</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>