unpackaged/main/default/objects/Contract/fields/Program_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Program_Termination_Date__c</fullName>
    <label>Program Termination Date</label>
    <type>Date</type>
</CustomField>