unpackaged/main/default/objects/Contract/fields/Renewal_Term__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Term__c</fullName>
    <label>Renewal Term</label>
    <length>50</length>
    <type>Text</type>
</CustomField>