unpackaged/main/default/objects/Contract/fields/Renewal_Type__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Type__c</fullName>
    <label>Renewal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automatic</fullName>
            </value>
            <value>
                <fullName>Action Required</fullName>
            </value>
            <value>
                <fullName>PSM Renewal</fullName>
            </value>
            <value>
                <fullName>Not Renewing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>