unpackaged/main/default/objects/Contract/fields/Report_PHI_Date_Breach_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>Report_PHI_Date_Breach_to_Contact__c</fullName>
    <inlineHelpText>Enter no data if blank.</inlineHelpText>
    <label>Report PHI Date Breach to Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>