unpackaged/main/default/objects/Contract/fields/Reporting_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Requirements__c</fullName>
    <inlineHelpText>Are there any reports to be sent monthly, bi-monlthy, etc., to client from PrudentRx.</inlineHelpText>
    <label>Reporting Requirements</label>
    <type>TextArea</type>
</CustomField>