unpackaged/main/default/objects/Contract/fields/Secondary_PBM_AM_EM_Client_Contact__c.field-meta.xml
<CustomField>
    <fullName>Secondary_PBM_AM_EM_Client_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PBM Account Executive</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts (PBM Account Executive)</relationshipLabel>
    <relationshipName>Contracts3</relationshipName>
    <type>Lookup</type>
</CustomField>