unpackaged/main/default/objects/Contract/fields/Secondary_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Secondary_s_Email__c</fullName>
    <formula>Secondary_PBM_AM_EM_Client_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary&#39;s Email</label>
    <type>Text</type>
</CustomField>