unpackaged/main/default/objects/Contract/fields/Semi_Annual_Member_Satis_Survey_Req__c.field-meta.xml
<CustomField>
    <fullName>Semi_Annual_Member_Satis_Survey_Req__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Semi-Annual Member Satisfaction Surevy Required</inlineHelpText>
    <label>Semi-Annual Member Satis. Survey Req.?</label>
    <type>Checkbox</type>
</CustomField>