unpackaged/main/default/objects/Contract/fields/State_for_Litigation__c.field-meta.xml
<CustomField>
    <fullName>State_for_Litigation__c</fullName>
    <label>State for Litigation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>