unpackaged/main/default/objects/Contract/fields/Term_for_Convenience_Fee__c.field-meta.xml
<CustomField>
    <fullName>Term_for_Convenience_Fee__c</fullName>
    <label>Term for Convenience Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>