unpackaged/main/default/objects/Contract/fields/Termination_for_Convenience__c.field-meta.xml
<CustomField>
    <fullName>Termination_for_Convenience__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this is selected as true, please fill in the &#39;Term for Convenience Fee&#39; below.</inlineHelpText>
    <label>Termination for Convenience</label>
    <type>Checkbox</type>
</CustomField>