unpackaged/main/default/objects/Contract/fields/Termination_Term__c.field-meta.xml
<CustomField>
    <fullName>Termination_Term__c</fullName>
    <label>Termination Term</label>
    <length>100</length>
    <type>Text</type>
</CustomField>